# HashSum

./: CMakeLists.txt  HashSum.cpp  HashSump.cpp  MacOSHash.cpp  MacOSHash.h  README.md  WindowsHash.cpp  WindowsHash.h
.github/workflows/: cmake.yml
